env colon to equals

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-client_id: "8b1e1f7a-03a5-419a-b69a-e05e3cd9255e"
-client_secret: "e700eef4-5565-41f1-ab1f-8140a211cfb2"
+client_id="8b1e1f7a-03a5-419a-b69a-e05e3cd9255e"
+client_secret="e700eef4-5565-41f1-ab1f-8140a211cfb2"
